<?xml version="1.0"?>
<package format="2">
  <name>vs_uav</name>
  <version>0.0.0</version>
  <description>Visal servoing for UAVs</description>


  <maintainer email="muhammad.humais@ku.ac.ae">oussama</maintainer>



  <license>TODO</license>




  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>hear_ros_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

</package>
